<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bookname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="18dp"
        android:textSize="20sp"
        android:text="@string/bName" />

    <TextView
        android:id="@+id/isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bookEdition"
        android:layout_below="@+id/bookname"
        android:text="@string/isbn"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/bookEdition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bookname"
        android:layout_below="@+id/isbn"
        android:text="@string/bEdition"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bookEdition"
        android:layout_below="@+id/bookEdition"
        android:text="@string/bClass"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Class"
        android:layout_below="@+id/Class"
        android:text="@string/bPrice"
        android:textStyle="bold|italic"
        android:textColor="@color/Red"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/bPic"
        android:textStyle="italic"
        android:layout_alignStart="@+id/bPic"
        android:layout_below="@+id/bPic"
        android:text="@string/seller"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/bPic"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/bookname"
        android:layout_marginEnd="87dp"
        android:src="@drawable/common_full_open_on_phone" />


</RelativeLayout>